Move source to src/main; upgrade Serenity; add scenarios