@@ -21,9 +21,11 @@
 
         <jdk.version>1.7</jdk.version>
         <slf4j.version>1.7.7</slf4j.version>
-        <serenity.version>1.1.40</serenity.version>
-        <serenity.maven.version>1.1.40</serenity.maven.version>
-        <serenity.cucumber.version>1.1.10</serenity.cucumber.version>
+        <serenity.version>1.2.2-rc.2</serenity.version>
+        <serenity.maven.version>1.2.2-rc.2</serenity.maven.version>
+        <serenity.cucumber.version>1.1.14</serenity.cucumber.version>
+
+        <webdriver.ie.driver>target/drivers/IEDriverServer.exe</webdriver.ie.driver>
     </properties>
 
 
@@ -42,20 +44,6 @@
                         <arg>-Xlint:all</arg>
                     </compilerArgs>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
@@ -82,7 +70,7 @@
                     .*(Cat|Dog)FeatureTest.class  <== Match Cat AND Dog test runners
                     testrunner.prefixes default to empty (i.e. ALL), but can be overridden via command line / CI
                  -->
-                <testrunner.prefixes></testrunner.prefixes>
+                <testrunner.prefixes>Naming</testrunner.prefixes>
                 <failsafe.testrunner>%regex[.*(${testrunner.prefixes})FeatureTest.class]</failsafe.testrunner>
                 <parallel.tests>4</parallel.tests>
                 <webdriver.ie.driver>target/drivers/IEDriverServer.exe</webdriver.ie.driver>
@@ -90,6 +78,30 @@
 
             <build>
                 <plugins>
+                    <!--
+                        Because our test runners are in src/main/java, as opposed to src/test/java,
+                        the default location and where FailSafe looks for test code, we must point test source to src/main/java.
+                    -->
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>build-helper-maven-plugin</artifactId>
+                        <version>1.12</version>
+                        <executions>
+                            <execution>
+                                <id>add-test-source</id>
+                                <phase>generate-test-sources</phase>
+                                <goals>
+                                    <goal>add-test-source</goal>
+                                </goals>
+                                <configuration>
+                                    <sources>
+                                        <source>src/main/java</source>
+                                    </sources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
                     <!--  Copy serenityCI.properties to <root>/serenity.propertie as required by Serenity -->
                     <plugin>
                         <groupId>com.coderplus.maven.plugins</groupId>
@@ -103,7 +115,144 @@
                                     <goal>copy</goal>
                                 </goals>
                                 <configuration>
-                                    <sourceFile>src/test/resources/serenityCI.properties</sourceFile>
+                                    <sourceFile>src/main/resources/serenityCI.properties</sourceFile>
+                                    <destinationFile>serenity.properties</destinationFile>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <!-- Echo properties before launching failsafe integration tests -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.4</version>
+                        <executions>
+                            <execution>
+                                <phase>integration-test</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <echo>Test runner properties</echo>
+                                        <echo>prefixes.: ${testrunner.prefixes}</echo>
+                                        <echo>runners..: ${failsafe.testrunner}</echo>
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.19.1</version>
+                        <configuration>
+                            <reportsDirectory>${project.build.directory}/failsafe-reports/e2e</reportsDirectory>
+                            <summaryFile>${project.build.directory}/failsafe-reports/e2e/failsafe-summary.xml</summaryFile>
+                            <forkCount>1</forkCount>
+                            <reuseForks>false</reuseForks>
+                            <argLine>-XX:MaxPermSize=2G</argLine>
+                            <failIfNoTests>false</failIfNoTests>
+                            <skipITs>false</skipITs>
+                            <includes>
+                                <include>${failsafe.testrunner}</include>
+                            </includes>
+                            <parallel>classes</parallel>
+                            <threadCount>${parallel.tests}</threadCount>
+                            <forkCount>${parallel.tests}</forkCount>
+                            <systemProperties>
+                                <webdriver.ie.driver>${webdriver.ie.driver}</webdriver.ie.driver>
+                            </systemProperties>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>net.serenity-bdd.maven.plugins</groupId>
+                        <artifactId>serenity-maven-plugin</artifactId>
+                        <version>${serenity.maven.version}</version>
+                        <executions>
+                            <execution>
+                                <id>serenity-reports</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>aggregate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>Serenity1.1.40</id>
+            <properties>
+                <!-- Override serenity versions to roll back to version 1.1.40 -->
+                <serenity.version>1.1.40</serenity.version>
+                <serenity.maven.version>1.1.40</serenity.maven.version>
+                <serenity.cucumber.version>1.1.10</serenity.cucumber.version>
+
+                <!-- Testing -->
+                <!--
+                    .*()FeatureTest.class         <== Match all *FeatureTest.class runners
+                    .*(Cat|Dog)FeatureTest.class  <== Match Cat AND Dog test runners
+                    testrunner.prefixes default to empty (i.e. ALL), but can be overridden via command line / CI
+                 -->
+                <testrunner.prefixes>Naming</testrunner.prefixes>
+                <failsafe.testrunner>%regex[.*(${testrunner.prefixes})FeatureTest.class]</failsafe.testrunner>
+                <parallel.tests>4</parallel.tests>
+                <webdriver.ie.driver>target/drivers/IEDriverServer.exe</webdriver.ie.driver>
+            </properties>
+
+            <build>
+                <plugins>
+                    <!--
+                        Because our test runners are in src/main/java, as opposed to src/test/java,
+                        the default location and where FailSafe looks for test code, we must point test source to src/main/java.
+                    -->
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>build-helper-maven-plugin</artifactId>
+                        <version>1.12</version>
+                        <executions>
+                            <execution>
+                                <id>add-test-source</id>
+                                <phase>generate-test-sources</phase>
+                                <goals>
+                                    <goal>add-test-source</goal>
+                                </goals>
+                                <configuration>
+                                    <sources>
+                                        <source>src/main/java</source>
+                                    </sources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <!--  Copy serenityCI.properties to <root>/serenity.propertie as required by Serenity -->
+                    <plugin>
+                        <groupId>com.coderplus.maven.plugins</groupId>
+                        <artifactId>copy-rename-maven-plugin</artifactId>
+                        <version>1.0</version>
+                        <executions>
+                            <execution>
+                                <id>copy-file</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <sourceFile>src/main/resources/serenityCI.properties</sourceFile>
                                     <destinationFile>serenity.properties</destinationFile>
                                 </configuration>
                             </execution>
